--- a/notebooks/vlm_usage_sample.ipynb
+++ b/notebooks/vlm_usage_sample.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNhqHfu8eVpncGhPHX6q3uY",
+      "authorship_tag": "ABX9TyO1ahVhs59e8q8R5YWOTrPz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4145,24 +4145,7 @@
       "source": [
         "# Processing Images and Text with Visual-Language Models (VLMs)\n",
         "\n",
-        "This notebook demonstrates how to use the `HuggingFaceTB/SmolVLM-Instruct` 4bit-quantized model for various multimodal tasks. These tasks include answering questions about images, recognizing and interpreting text in images, and analyzing videos through sequential frame analysis. By structuring prompts effectively, this notebook showcases how to apply the model to practical applications like scene understanding, document analysis, and video reasoning.\n",
-        "\n",
-        "---\n",
-        "\n",
-        "## What's Inside\n",
-        "\n",
-        "### Processing Images\n",
-        "This section explores how the model processes single and multiple images for captioning and answering questions.\n",
-        "\n",
-        "1. **Single Image Captioning**  \n",
-        "   Generate captions and answer questions about individual images. This demonstrates the model's ability to understand and describe visual content.\n",
-        "\n",
-        "2. **Comparing Multiple Images**  \n",
-        "   Analyze and compare multiple images to identify common themes or differences. This highlights the model's capacity for visual reasoning across images.\n",
-        "\n",
-        "3. **Text Recognition (OCR)**  \n",
-        "   Leverage the model's ability to recognize and interpret text within images, making it useful for tasks like document analysis and text-heavy visuals. We experiment with images that contain dense text to evaluate the model's OCR capabilities.\n",
-        "\n"
+        "This notebook demonstrates how to use the `HuggingFaceTB/SmolVLM-Instruct` 4bit-quantized model for various multimodal tasks. These tasks include answering questions about images, recognizing and interpreting text in images, and analyzing videos through sequential frame analysis. By structuring prompts effectively, this notebook showcases how to apply the model to practical applications like scene understanding, document analysis, and video reasoning.\n"
       ]
     },
     {
